[tool.poetry]
name = "loading"
version = "1.0.0"
description = "A project for 42"
authors = ["razevedo <razevedo@student.42porto.com>"]

[tool.poetry.dependencies]
pandas = "^2.1.0"
python = "^3.10"
requests = "^2.31.0"
matplotlib = "^3.7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
