[tool.poetry]
name = "loading"
version = "0.1.0"
description = "Data analysis program"
authors = ["razevedo <razevedo@student.42porto.com>"]

[tool.poetry.dependencies]
pandas = "^2.1.0"
python = "^3.10"
numpy = "^2.2.6"
matplotlib = "^3.7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
